# openGauss-server

./: .clang-format  .gitattributes  .gitignore  0001-clean-code-jin.patch  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  GNUmakefile.in  GNUmakefile.in_for_llt  License  Makefile  README.en.md  README.md  Third_Party_Open_Source_Software_Notice  build.sh  config.sh  configure  configure.in  dependency.xml  distribute_errmsg.txt  escan.txt
contrib/: .gitignore  CMakeLists.txt  Makefile  README
contrib/adminpack/: adminpack.cpp
contrib/auth_delay/: auth_delay.cpp
contrib/auto_explain/: auto_explain.cpp
contrib/btree_gin/: btree_gin--1.0.sql  btree_gin--unpackaged--1.0.sql  btree_gin.cpp
contrib/btree_gist/: btree_bit.cpp  btree_bytea.cpp  btree_cash.cpp  btree_date.cpp  btree_float4.cpp  btree_float8.cpp  btree_gist.cpp  btree_gist.h  btree_inet.cpp  btree_int2.cpp  btree_int4.cpp  btree_int8.cpp  btree_interval.cpp  btree_macaddr.cpp  btree_numeric.cpp  btree_oid.cpp  btree_text.cpp  btree_time.cpp  btree_ts.cpp  btree_utils_num.cpp  btree_utils_num.h  btree_utils_var.cpp  btree_utils_var.h
contrib/chkpass/: chkpass.cpp
contrib/citext/: citext.cpp
contrib/common_cipher/: Makefile  README.md  common_algo.cpp  common_algo.h  common_cipher.cpp  common_cipher.h  common_err.cpp  common_err.h  common_internal_interfaces.cpp  common_internal_interfaces.h  common_utils.cpp  common_utils.h  test.cpp
contrib/cube/: Makefile  cube.cpp  cubedata.h  cubeparse.y  cubescan.l
contrib/dblink/: CMakeLists.txt  Makefile  README  check_dblink.sh  check_dblink_libpq.sh  check_dblink_odbc.sh  dblink--1.0.sql  dblink--unpackaged--1.0.sql  dblink.cpp  dblink.h
contrib/dict_int/: dict_int.cpp
contrib/dict_xsyn/: dict_xsyn.cpp
contrib/dummy_seclabel/: CMakeLists.txt  dummy_seclabel.cpp
contrib/earthdistance/: earthdistance.cpp
contrib/file_fdw/: CMakeLists.txt  Makefile  file_fdw--1.0.sql  file_fdw.cpp
contrib/fuzzystrmatch/: Makefile  dmetaphone.cpp  fuzzystrmatch.cpp  levenshtein.cpp
contrib/gauss_connector/: deparse.cpp  gc_fdw.cpp
contrib/gc_fdw/: CMakeLists.txt  Makefile  deparse_single.cpp  gc_fdw--1.0.sql  gc_fdw.control  gc_fdw.h  gc_fdw_single.cpp  option_single.cpp
contrib/gms_assert/: CMakeLists.txt  Makefile  gms_assert--1.0.sql  gms_assert.control  gms_assert.cpp  gms_assert.h
contrib/gms_compress/: CMakeLists.txt  Makefile  gms_compress--1.0.sql  gms_compress.control  gms_compress.cpp  gms_compress.h
contrib/gms_debug/: CMakeLists.txt  Makefile  gms_debug--1.0.sql  gms_debug.control  gms_debug.cpp  gms_debug.h
contrib/gms_i18n/: CMakeLists.txt  Makefile  gms_i18n--1.0.sql  gms_i18n.control  gms_i18n.cpp  gms_i18n.h
contrib/gms_inaddr/: CMakeLists.txt  Makefile  gms_inaddr--1.0.sql  gms_inaddr.control  gms_inaddr.cpp  gms_inaddr.h
contrib/gms_lob/: CMakeLists.txt  Makefile  bfile.cpp  bfile.h  gms_lob--1.0.sql  gms_lob.control  gms_lob.cpp  gms_lob.h
contrib/gms_match/: CMakeLists.txt  Makefile  gms_match--1.0.sql  gms_match.control  gms_match.cpp  gms_match.h
contrib/gms_output/: CMakeLists.txt  Makefile  gms_output--1.0.sql  gms_output.control  gms_output.cpp  gms_output.h
contrib/gms_profiler/: CMakeLists.txt  Makefile  gms_profiler--1.0.sql  gms_profiler.control  gms_profiler.cpp  gms_profiler.h
contrib/gms_raw/: CMakeLists.txt  Makefile  gms_raw--1.0.sql  gms_raw.control  gms_raw.cpp  gms_raw.h
contrib/gms_sql/: CMakeLists.txt  Makefile  gms_sql--1.0.sql  gms_sql.control  gms_sql.cpp  gms_sql.h
contrib/gms_stats/: CMakeLists.txt  Makefile  gms_stats--1.0--1.1.sql  gms_stats--1.0.sql  gms_stats--1.1.sql  gms_stats.control  gms_stats.cpp  gms_stats.h
contrib/gms_tcp/: CMakeLists.txt  Makefile  gms_tcp--1.0--1.1.sql  gms_tcp--1.0.sql  gms_tcp--1.1.sql  gms_tcp.control  gms_tcp.cpp  gms_tcp.h  parallel_schedule
contrib/gms_utility/: CMakeLists.txt  Makefile  gms_utility--1.0.sql  gms_utility.control  gms_utility.cpp  gms_utility.h
contrib/gms_xmlgen/: CMakeLists.txt  Makefile  gms_xmlgen--1.0.sql  gms_xmlgen.control  gms_xmlgen.cpp  gms_xmlgen.h
contrib/gs_filedump/: Makefile  README.gs_filedump.md  README.md  checksum.cpp  decode.cpp  decode.h  gs_desc  gs_filedump.cpp  gs_filedump.h  segment.cpp  segment.h  stringinfo.cpp
contrib/gsredistribute/: Makefile  gsredistribute--1.0.sql  gsredistribute--unpackaged--1.0.sql  gsredistribute.control  gsredistribute.cpp
contrib/gtmtester/: Makefile  gtmtester  gtmtester.cpp
contrib/hdfs_fdw/: CMakeLists.txt  Makefile  hdfs_fdw--1.0.sql  hdfs_fdw.control  hdfs_fdw.cpp  init.sh  orc.proto  scheduler.cpp
contrib/hstore/: CMakeLists.txt  Makefile  crc32.cpp  crc32.h  hstore--1.0.sql  hstore--1.1.sql  hstore--unpackaged--1.0.sql  hstore.h  hstore_compat.cpp  hstore_gin.cpp  hstore_gist.cpp  hstore_io.cpp  hstore_op.cpp
contrib/intarray/: _int.h  _int_bool.cpp  _int_gin.cpp  _int_gist.cpp  _int_op.cpp  _int_tool.cpp  _intbig_gist.cpp  intarray--1.0.sql
contrib/isn/: EAN13.h  ISBN.h  ISMN.h  ISSN.h  UPC.h  isn.cpp  isn.h
contrib/jieba_tokenizer/: CMakeLists.txt  Makefile  tokenizer.cpp  tokenizer.h
contrib/lo/: lo.cpp
contrib/log_fdw/: CMakeLists.txt  Makefile  log_fdw--1.0.sql  log_fdw.control  log_fdw.cpp  log_fdw.h  log_fdw_private.h  prflog_dump.cpp  prflog_dump.h
contrib/ltree/: _ltree_gist.cpp  _ltree_op.cpp  crc32.cpp  crc32.h  lquery_op.cpp  ltree.h  ltree_gist.cpp  ltree_io.cpp  ltree_op.cpp  ltxtquery_io.cpp  ltxtquery_op.cpp
contrib/mppdb_decoding/: CMakeLists.txt  Makefile  logical.control  mppdb_decoding.cpp
contrib/mysql_fdw/: Makefile
contrib/ndpplugin/: CMakeLists.txt  Makefile  common.h  dynloader.cpp  ndp_check.cpp  ndp_check.h  ndpam.cpp  ndpam.h  ndpnodes.h  ndpoutfuncs.cpp  ndpplugin--1.0.sql  ndpplugin.control  ndpplugin.cpp  ndpplugin.h  rpc.cpp
contrib/oid2name/: oid2name.cpp
contrib/oracle_fdw/: Makefile
contrib/pagehack/: CMakeLists.txt  Makefile  openGaussCompression.cpp  (+3 more)
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.global.in  Makefile.global.in_for_llt  Makefile.shlib  get_PlatForm_str.sh  mtlocal.pl  nls-global.mk
(+14539 files in other folders)
